--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
+        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <version>${org.springframework-version}</version>
+	    </dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
@@ -175,9 +180,24 @@
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-mapper-asl</artifactId>
+	        <version>1.9.13</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-core-asl</artifactId>
+	        <version>1.9.13</version>
+	    </dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.6</version>
+			<version>2.9.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.5</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -222,13 +242,7 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
-		<!-- 잭슨 -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.5</version>
-        </dependency>
- 
+		
         <!-- httpcore(카카오) -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -243,7 +257,31 @@
             <version>4.5.2</version>
         </dependency>
 
-
+		<!-- 파일 업로드  -->
+		 <!-- Apache Commons Upload -->
+	    <dependency>
+	        <groupId>commons-fileupload</groupId>
+	        <artifactId>commons-fileupload</artifactId>
+	        <version>1.2.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>commons-io</groupId>
+	        <artifactId>commons-io</artifactId>
+	        <version>1.4</version>
+	    </dependency>
+	 
+	 	<dependency>
+	 		<groupId>net.coobird</groupId>
+	 		<artifactId>thumbnailator</artifactId>
+	 		<version>0.4.8</version>
+	 	</dependency>
+	 	
+	 	<dependency>
+		    <groupId>org.imgscalr</groupId>
+		    <artifactId>imgscalr-lib</artifactId>
+		    <version>4.2</version>
+		</dependency>
+		 
 
 	</dependencies>
 	<build>
